--- a/department.html
+++ b/department.html
@@ -44,7 +44,7 @@
 
         <div class="hiring-bottom">
             <div class="row">
-                <div class="col-xl-3 md-3">
+                <div class="col">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-text">STEP-1</h5>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 md-3">
+                <div class="col">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-text">STEP-2</h5>
@@ -66,19 +66,7 @@
                     </div>
                 </div>
 
-
-                <div class="col-xl-3 md-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-text">STEP-3</h5>
-                            <h6 class="card-text">Leader Interview</h6>
-                            <i class="fa-regular fa-comment fa-beat-fade"></i>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 md-3">
+                <div class="col">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-text">STEP-4</h5>
